--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: "A-SMART Lab"
-description: "Applied Systems Modeling, Analytics, Research & Technology"
+description: "Applied Systems Modeling, Analytics, Research & Technology (A-SMART) Lab"
 theme: minima
